erDiagram
    USER |o--|{ USER_ROLE_LINK : user_id
    USER |o--|{ COURSE_USER_LINK : user_id
    COURSE_USER_LINK }|--o| COURSE : class_id
    USER_ROLE_LINK }|--o| ROLE : role_id
    ROLE |o--|{ ROLE_PERMISSION_LINK : role_id
    ROLE_PERMISSION_LINK }|--o| PERMISSION : permission_id
    OPERATION |o--|{ OPERATION_PERMISSION_LINK : operation_id
    OPERATION_PERMISSION_LINK }|--o| PERMISSION : permission_id
    COMPONENT |o--|{ COMPONENT_PERMISSION_LINK : component_id
    COMPONENT_PERMISSION_LINK }|--o| PERMISSION : permission_id
	
	USER {
	int user_id PK
	varchar(30) user_username UK
	varchar(50) first_name
	varchar(50) last_name
	varchar(254) email UK
	boolean is_prof
	boolean is_student
	}
	
	COURSE_USER_LINK {
	int user_id PK,FK
	int class_id PK,FK
	}
	
	COURSE {
	int class_id PK
    varchar(10) course_id UK
    int section_id UK
    varchar(30) name
    varchar(20) department
    varchar(10) campus
    varchar(5) term UK
    varchar(30) days_offered
    varchar(20) times_offered
    varchar(10) availiability
    int credits
    }
	
	USER_ROLE_LINK {
	int user_id PK,FK
	int role_id PK,FK
	}
	
	ROLE {
	int role_id PK
	varchar(20) role_name
	}
	
	ROLE_PERMISSION_LINK {
	int role_id PK,FK
	int permission_id PK,FK
	}
	
	OPERATION {
	int operation_id PK
	varchar(255) operation_route
	int operation_type
	}
	
	OPERATION_PERMISSION_LINK {
	int operation_id PK,FK
	int permission_id PK,FK
	}
	
	PERMISSION {
	int permission_id PK
	varchar(30) permission_name
	}
	
	COMPONENT_PERMISSION_LINK {
	int component_id PK,FK
	int permission_id PK,FK
	}
	
	COMPONENT {
	int component_id PK
	varchar(255) component_name
	int component_type

	}
